WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
101197
[EFL] Fix build warning in EWebLauncher/main.c
https://bugs.webkit.org/show_bug.cgi?id=101197
Summary
[EFL] Fix build warning in EWebLauncher/main.c
KyungTae Kim
Reported
2012-11-05 02:13:29 PST
For fixing the follow build warnings : /mnt/buildbot/efl-linux-slave-1/efl-linux-64-release/build/Tools/EWebLauncher/main.c:941:9: warning: initialization from incompatible pointer type [enabled by default] /mnt/buildbot/efl-linux-slave-1/efl-linux-64-release/build/Tools/EWebLauncher/main.c:941:9: warning: (near initialization for ‘values[0].strp’) [enabled by default] /mnt/buildbot/efl-linux-slave-1/efl-linux-64-release/build/Tools/EWebLauncher/main.c:943:9: warning: initialization from incompatible pointer type [enabled by default] /mnt/buildbot/efl-linux-slave-1/efl-linux-64-release/build/Tools/EWebLauncher/main.c:943:9: warning: (near initialization for ‘values[2].strp’) [enabled by default] /mnt/buildbot/efl-linux-slave-1/efl-linux-64-release/build/Tools/EWebLauncher/main.c:948:9: warning: initialization from incompatible pointer type [enabled by default] /mnt/buildbot/efl-linux-slave-1/efl-linux-64-release/build/Tools/EWebLauncher/main.c:948:9: warning: (near initialization for ‘values[7].strp’) [enabled by default] /mnt/buildbot/efl-linux-slave-1/efl-linux-64-release/build/Tools/EWebLauncher/main.c:949:9: warning: initialization from incompatible pointer type [enabled by default] /mnt/buildbot/efl-linux-slave-1/efl-linux-64-release/build/Tools/EWebLauncher/main.c:949:9: warning: (near initialization for ‘values[8].strp’) [enabled by default] The destination for ECORE_GETOPT_VALUE_STR is char**, but the source is &(const char*). One of them need to be fixed. //Ecore_Getopt.h union _Ecore_Getopt_Value { char **strp; .. };
Attachments
Patch
(1.52 KB, patch)
2012-11-05 02:18 PST
,
KyungTae Kim
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
KyungTae Kim
Comment 1
2012-11-05 02:18:59 PST
Created
attachment 172298
[details]
Patch
Kentaro Hara
Comment 2
2012-11-05 02:24:55 PST
Comment on
attachment 172298
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=172298&action=review
> Tools/EWebLauncher/main.c:146 > + char *engine;
According to the WebKit coding style, this should be 'char* engine' instead of 'char *engine'. Same comments for the following variables.
Gyuyoung Kim
Comment 3
2012-11-05 02:28:20 PST
Comment on
attachment 172298
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=172298&action=review
>> Tools/EWebLauncher/main.c:146 >> + char *engine; > > According to the WebKit coding style, this should be 'char* engine' instead of 'char *engine'. Same comments for the following variables.
Kentaro, this is EFL simple application. So, we follow EFL coding style for EWebLauncher.
Kentaro Hara
Comment 4
2012-11-05 02:29:43 PST
Comment on
attachment 172298
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=172298&action=review
>>> Tools/EWebLauncher/main.c:146 >>> + char *engine; >> >> According to the WebKit coding style, this should be 'char* engine' instead of 'char *engine'. Same comments for the following variables. > > Kentaro, this is EFL simple application. So, we follow EFL coding style for EWebLauncher.
Makes sense. Thanks for the clarification.
WebKit Review Bot
Comment 5
2012-11-05 02:57:41 PST
Comment on
attachment 172298
[details]
Patch Clearing flags on attachment: 172298 Committed
r133452
: <
http://trac.webkit.org/changeset/133452
>
WebKit Review Bot
Comment 6
2012-11-05 02:57:45 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug