[EFL] Fix build warning in EWebLauncher/main.c https://bugs.webkit.org/show_bug.cgi?id=101197

Patch by KyungTae Kim <ktf.kim@samsung.com> on 2012-11-05
Reviewed by Kentaro Hara.

Because the strp of _Ecore_Getopt_Value is char** (Ecore_Getopt.h),
The parameter of ECORE_GETOPT_VALUE_STR should be char*

* EWebLauncher/main.c:
(_User_Arguments):

Canonical link: https://commits.webkit.org/119287@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133452 268f45cc-cd09-0410-ab3c-d52691b4dbfc